Adding text/citations about GISs, group theory.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -227,7 +227,17 @@ throughout]{rings:2011}.}
   typically follow conventions used by \emph{The Real Book}.}
 
 \fntext{ds-3}{%
+  The operator $t_k$ is described as a “generic transposition operator” in
+  \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
+  since I am interested at this point only in its application to the diatonic
+  set S.}
 
-}
+\fntext{ds-4}{%
+  Lewin’s definition of a mathematical group is spread over several pages in
+  the first chapter of \emph{GMIT} (4--6). For other definitions in works of
+  music theory, see \cite[12--13]{rings:2011}, and \cite[Ch. 5]{hook:mst}. Any
+  introductory mathematical text on group theory will contain the group
+  axioms; see, for example, \cite[10--14]{grossman:1964} and
+  \cite[51]{carter:2009}.}
 
 % }}}
