--- a/diss.bib
+++ b/diss.bib
@@ -77,6 +77,14 @@ Theory} }
   year        = {2006}
 }
 
+@book{carter:2009,
+  author      = {Carter, Nathan},
+  title       = {Visual Group Theory},
+  address     = {Washington, D.C.},
+  publisher   = {Mathematical Association of America},
+  year        = {2009}
+}
+
 @article{childs:1998,
   author      = {Childs, Adrian P.},
   title       = {Moving Beyond Neo-Riemannian Triads},
@@ -212,6 +220,14 @@ Theory} }
   year        = {2001}
 }
 
+@book{grossman:1964,
+  author      = {Grossman, Israel and Magnus, Wilhelm},
+  title       = {Groups and Their Graphs},
+  address     = {Washington, D.C.},
+  publisher   = {Mathematical Association of America},
+  year        = {1964}
+}
+
 @phdthesis{heyer:2011,
   author      = {Heyer, David J.},
   title       = {Vocabulary, Voice Leading, and Motivic Coherence in Chet
@@ -267,6 +283,13 @@ Theory} }
   year        = {2011}
 }
 
+@article{hook:2014,
+  author      = {Hook, Julian},
+  title       = {Generic Sequences and the Generic \emph{Tonnetz}},
+  journal     = {Oxford Handbooks Online},
+  year        = {2014}
+}
+
 @inproceedings{hook:heptachords,
   author      = {Hook, Julian},
   editor      = {Agon, Carlos and Amiot, Emmanuel and Andreatta, Moreno and
@@ -285,7 +308,9 @@ Theory} }
 @book{hook:mst,
   author      = {Hook, Julian},
   title       = {Musical Spaces and Transformations},
-  year        = {Forthcoming}
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  year        = {forthcoming}
 }
 
 @book{jaffe:1996,
