--- a/headers.tex
+++ b/headers.tex
@@ -55,6 +55,7 @@
 \fontsize{12pt}{12pt}
 
 \usepackage{subscript}    % for \textsubscript
+\usepackage{paralist}
 
 \usepackage[
   leftmargin = 0.5in,
