--- a/ch1.tex
+++ b/ch1.tex
@@ -520,8 +520,8 @@ identical in some other typological system.\fn{tt-7}
 
 %}}}
 
-\section{Diatonic Chord Space}
-\label{sec:diatonic-space} %{{{
+\section{Diatonic Chord Spaces}
+\label{sec:diatonic-spaces} %{{{
 
 % xxx revise me
 
@@ -554,21 +554,122 @@ Figure \ref{ds:circle-of-fifths}).
 \figEnd
 
 While this arrangement around the diatonic circle of fifths makes intuitive
-sense, it also forms what David Lewin has called a Generalized Interval System
-(GIS).\footcite[26]{lewin:gmit} Since this is the first of several GISs we
-will encounter, it will be useful here to explore the concept in some depth.
+sense, it also depicts what David Lewin has called a Generalized Interval
+System (GIS).\footcite[26]{lewin:gmit} Since this is the first of several GISs
+we will encounter, it will be useful here to explore the concept in some
+depth.  Generalized Interval Systems are Lewin’s way of formalizing the
+“directed measurements, distances, or motions” that we often understand as
+“characteristic textural features” of a given musical
+space.\footcite[16]{lewin:gmit} Though we will unpack this definition using
+the the harmonies from the A section of “Autumn Leaves” as an example, Lewin’s
+formal definition is as follows:
+\begin{quoting}
+  \singlespacing
+  A \emph{Generalized Interval System} (GIS) is an ordered triple (S, IVLS,
+  int), where S, the \emph{space} of the GIS, is a family of elements, IVLS,
+  the \emph{group of intervals} for the GIS, is a mathematical group, and int
+  is a function mapping S $\times$ S into IVLS, all subject to the two
+  conditions (A) and (B) following.
+  \begin{compactenum}[(A): ]
+    \item For all r, s, and t in S, \mbox{int(r,s)int(s,t) = int(r,t)}
+    \item For every s in S and every i in IVLS, there is a unique t in S which
+      lies the interval i from s, that is a unique t which satisfies the
+      equation \mbox{int(s,t) = i}.\footcite[Definition 2.3.1 (26)]{lewin:gmit}
+  \end{compactenum}
+\end{quoting}
 
-% xxx a paragraph here on GISs and how they’re useful, etc.
-[[[ to be written ]]]
+The first element in a GIS is a family of elements, S, which Lewin also calls
+a musical space. Preceding this formal definition, he gives a number of
+examples of musical spaces, including the familiar diatonic and pitch and
+pitch-class spaces as well as less familiar musical spaces like frequency
+space, time point space, and various durational
+spaces.\footcite[16--25]{lewin:gmit} In our “Autumn Leaves” example, we are
+interested in the (unordered) set of harmonies in the G-minor diatonic cycle:
+\mbox{$S =$ \{\h{GmM7},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7},
+\h{F7}\}.
 
-A GIS ($S$, IVLS, int) consists of a space $S$, an interval group IVLS, and an
-interval function of the space. Here, the space of the GIS is the set of
-chords in the diatonic cycle: \mbox{$S =$ \{\h{GmM7},} \h{Am7b5}, \h{BfM7}, \h{Cm7},
-\h{D7}, \h{EbM7}, \h{F7}\}. The interval group, IVLS, is the cyclic group
-$\mathcal{C}_7 = \{t_0,t_1,\ldots,t_6\}$, where $t_k$ is the diatonic
-transposition operator that transposes the root of a chord $k$ steps inside a
-particular diatonic collection. The interval function maps $S \times S$ into
-IVLS; the interval between two chords in $S$ is a member of the group
-$\mathcal{C}_7$.
+With the first element of a GIS satisfied, we must then define a group of
+intervals (IVLS). Though we could perhaps define a number of different ways to
+define intervals among elements of the set S, the most obvious is to measure
+distances between the chord roots. Because we are interested in the diatonic
+system, we can use the diatonic transposition operator, $t_k$, as a measure of
+these distances.\fn{ds-3} Because we are interested in abstract chord roots
+and not the actual pitches played by some bass player or pianist’s left
+hand, we will use diatonic pitch \emph{classes}. This has the effect of
+modularizing the set of possible transpositions, changing IVLS from
+$\{\ldots,t_{-2},t_{-1},t_{0},t_{1},t_{2},\ldots\}$ (as it would be in
+diatonic \emph{pitch} space) to $\{t_0,t_1,\ldots,t_6\}$. Arithmetic in this
+group is mod-7, exactly in the way that arithmetic using the more familiar
+chromatic $T_k$ operator is mod-12.
+
+Lewin specifies that IVLS must be a mathematical group, and we will take care
+to show that IVLS = $\{t_0,t_1,\ldots,t_6\}$ is indeed such a group. A group
+is a set of elements, $G$, and a binary operaton, $\otimes$, that satisies the
+four group axioms:
+\begin{compactitem}
+  \singlespacing
+  \item Closure: for $a, b \in  G$, then $a \otimes b$ must be an
+    element of $G$.
+  \item Associativity: for $a, b, c \in G$, then the equation $(a \otimes b)
+    \otimes c = a \otimes (b \otimes c)$ must be true.
+  \item Identity element: There exists an element $e \in G$ such that for any
+    element $a \in G$, $a \otimes e = e \otimes a = a$ is true.
+  \item Inverses: For any element $a \in G$, there exists a unique element
+    $a^{-1} \in G$ such that $a \otimes a^{-1} = a^{-1} \otimes a = e$ is
+    true.\fn{ds-4}
+\end{compactitem}
+
+To show that IVLS is a group, it is sufficient to show that the set
+$\{t_0,t_1,\ldots,t_6\}$ under some binary operation satisfies the group
+axioms. The binary operation is addition of subscripts, performed mod-7 (which
+we will denote $\oplus$ instead of $\otimes$ to avoid the implication of
+multiplication); to determine the result of $t_1 \oplus t_3$, simply add the
+subscripts to get $t_4$. We can then show that the set IVLS is closed: for any
+two elements $a, b \in \mathrm{IVLS}$, $a \oplus b$ is also an element of IVLS
+($t_1 \oplus t_3 = t_4; t_4 \oplus t_4 = t_1; t_1 \oplus t_0 = t_1$; and so
+on). Because modular addition is associative, we know that $\oplus$ is
+associative as well: $(t_1 \oplus t_2) \oplus t_3 = t_1 \oplus (t_2 \oplus
+t_3)$, and likewise for any chosen elements of IVLS. The identity element of
+the group is $t_0$, which combined with any element $a \in \mathrm{IVLS}$ gives $a$
+itself. Inverses in the group are simply complements mod-7: $t_2^{-1} = t_5;
+t_1^{-1} = t_6$; and so on. IVLS is isomorphic to the group $G =
+(\mathbb{Z}_7, +)$, and it also a cyclic group generated by the element $t_1$,
+so we will label it $\mathcal{C}_7$.
+
+The last element of a GIS is an interval function that maps $S \times S$ into
+IVLS. In other words, the interval from one element of S to another must be a
+member of the group $\mathcal{C}_7$, discussed at length above. In our “Autumn
+Leaves” example, the operator $t_k$ transposes the root of a chord $k$ steps
+inside the G-minor diatonic collection, so the interval from one element of S
+to another is that $t_k$ operator that produces the desired transposition.
+Thus, \mbox{int(\h{D7}, \h{GmM7} = $t_3$}, since transposing the root, D,
+three steps inside the G-minor diatonic collection gives G. Likewise,
+\mbox{int(\h{Am7b5}, \h{BbM7}) = $t_1$}; \mbox{int(\h{F7}, \h{EbM7}) = $t_6$};
+and so on.
+
+% xxx did jay say something about this in the proposal?
+We now have all of the elements of a GIS, but we must still prove that Lewin’s
+conditions A and B are satisfied, which we will do by example. Condition A
+states that for all r, s, and t in S, \mbox{int(r,s)int(s,t) = int(r,t)}. In
+our “Autumn Leaves” example, \mbox{int(Cm7,D7)int(D7,\h{EbM7})} must equal
+\mbox{int(Cm7,\h{EbM7})}: $t_1t_1 = t_2$. Second, for every chord $s$ in S and
+every interval $i$ in $\mathcal{C}_7$, there must be a unique chord $t$ which
+satisfies the equation \mbox{int$(s,t) = i$}. For example, there must be
+exactly one chord that lies $t_2$ units from \h{Cm7}: namely, \h{EbM7}.
+
+% xxx need a bit about converting GIS thinking to transformational thinking
+% (Rings sec 1.3.3)
+
+% xxx expand this conclusion
+Understood in this way, the chord progression of the A section of “Autumn
+Leaves,” and consequently the circle of fifths arrangement in Figure
+\ref{ds:circle-of-fifths}, can be understood as a series of $t_3$ transformations
+within this G-minor diatonic seventh-chord space. In mod-12 chromatic space,
+it can be difficult to make sense of this harmonic progression. The chord
+qualities can be confusing (two major sevenths in a row followed immediately
+by a half-diminished seventh), and it is sometimes hard to remember where the
+tritone in the bass falls in the progression, given the prevalence of
+perfect-fifth bass motion in the chromatic space. Understood in the context of
+this diatonic space, however, the harmonic motion becomes much clearer.
 
 %}}}
