Revising material from yesterday.
This removes a bunch of confusion about the difference between GIS
statements and transformational statements (oops).

--- a/headers.tex
+++ b/headers.tex
@@ -72,7 +72,7 @@
 \titlespacing*{\chapter}{0pt}{0pt}{1em}
 
 \titleformat*{\section}{\large\bfseries}
-% \titleformat*{\subsection}{\normalsize\bfseries}
+\titleformat*{\subsection}{\normalsize\bfseries}
 
 % page header
 % -----------
@@ -183,5 +183,6 @@
 % math shortcuts
 \newcommand{\lra}{\longrightarrow}
 \newcommand{\TFarrow}{\ensuremath{\overset{\mathrm{TF}}{\lra}}}
+\newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
 %% end headers.tex %%
