--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -210,10 +210,6 @@ throughout]{rings:2011}.}
 
 % Diatonic Chord Space {{{
 
-\fntext{ds-1}{%
-  Some text here about musical spaces, probably with reference to Jay’s
-  upcoming book.}
-
 \fntext{ds-2a}{%
   \emph{The Real Book} gives these changes in E minor, but most recorded
   performances are in G minor. I have transposed the given changes to reflect
@@ -226,12 +222,6 @@ throughout]{rings:2011}.}
   major seventh, which is indicated “mM7.” In examples, chord symbols
   typically follow conventions used by \emph{The Real Book}.}
 
-\fntext{ds-3}{%
-  The operator $t_k$ is described as a “generic transposition operator” in
-  \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
-  since I am interested at this point only in its application to the diatonic
-  set S.}
-
 \fntext{ds-4}{%
   Lewin’s definition of a mathematical group is spread over several pages in
   the first chapter of \emph{GMIT} (4--6). For other definitions in works of
@@ -239,5 +229,12 @@ throughout]{rings:2011}.}
   introductory mathematical text on group theory will contain the group
   axioms; see, for example, \cite[10--14]{grossman:1964} and
   \cite[51]{carter:2009}.}
+
+% moved, since $t_k$ is a transformation, not an interval
+\fntext{ds-3}{%
+  The operator $t_k$ is described as a “generic transposition operator” in
+  \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
+  since I am interested at this point only in its application to the diatonic
+  set S.}
 
 % }}}
