--- a/ch1.tex
+++ b/ch1.tex
@@ -523,14 +523,18 @@ identical in some other typological system.\fn{tt-7}
 \section{Diatonic Chord Spaces}
 \label{sec:diatonic-spaces} %{{{
 
+It will be easiest to introduce the transformational approach to jazz harmony
+developed in this study by way of an example. Much of this dissertation will
+be interested in the development of various musical spaces and various kinds
+of motions possible within them. This kind of approach was initially developed
+by David Lewin in \emph{Generalized Musical Intervals and Transformations},
+and a review of the approach found there will be useful before moving on
+to more involved examples.
+
+\subsection{Generalized Intervals and Transformations}
+\label{subsec:gistrans} % {{{{
+
 % xxx revise me
-
-It will be easiest to describe the transformational approach to jazz harmony
-by way of an example. Much of this dissertation will be interested in the
-development of various musical spaces.\fn{ds-1} These spaces can then be used
-as a kind of shortcut to explore transformational relationships among a given
-set of harmonies.
-
 Figure \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
 on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians typically refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
@@ -554,14 +558,12 @@ Figure \ref{ds:circle-of-fifths}).
 \figEnd
 
 While this arrangement around the diatonic circle of fifths makes intuitive
-sense, it also depicts what David Lewin has called a Generalized Interval
-System (GIS).\footcite[26]{lewin:gmit} Since this is the first of several GISs
-we will encounter, it will be useful here to explore the concept in some
-depth.  Generalized Interval Systems are Lewin’s way of formalizing the
+sense, it also depicts what Lewin has called a Generalized Interval System
+(GIS). Generalized Interval Systems are Lewin’s way of formalizing the
 “directed measurements, distances, or motions” that we often understand as
 “characteristic textural features” of a given musical
 space.\footcite[16]{lewin:gmit} Though we will unpack this definition using
-the the harmonies from the A section of “Autumn Leaves” as an example, Lewin’s
+the the harmonies from the A section of “Autumn Leaves” as an example, the
 formal definition is as follows:
 \begin{quoting}
   \singlespacing
@@ -589,21 +591,19 @@ interested in the (unordered) set of harmonies in the G-minor diatonic cycle:
 \h{F7}\}.
 
 With the first element of a GIS satisfied, we must then define a group of
-intervals (IVLS). Though we could perhaps define a number of different ways to
-define intervals among elements of the set S, the most obvious is to measure
-distances between the chord roots. Because we are interested in the diatonic
-system, we can use the diatonic transposition operator, $t_k$, as a measure of
-these distances.\fn{ds-3} Because we are interested in abstract chord roots
-and not the actual pitches played by some bass player or pianist’s left
-hand, we will use diatonic pitch \emph{classes}. This has the effect of
-modularizing the set of possible transpositions, changing IVLS from
-$\{\ldots,t_{-2},t_{-1},t_{0},t_{1},t_{2},\ldots\}$ (as it would be in
-diatonic \emph{pitch} space) to $\{t_0,t_1,\ldots,t_6\}$. Arithmetic in this
-group is mod-7, exactly in the way that arithmetic using the more familiar
-chromatic $T_k$ operator is mod-12.
+intervals (IVLS). Though we could perhaps imagine a number of different ways
+to define intervals among elements of the set S, the most obvious is to
+measure distances in diatonic steps between the chord roots. Because we are
+interested in abstract chord roots and not the actual pitches played by a bass
+player or a pianist’s left hand, we will use diatonic pitch classes. This has
+the effect of modularizing the set of possible intervals, changing IVLS from
+$\{\ldots,-2,-1,0,1,2,\ldots\}$ (as it would be in diatonic \emph{pitch}
+space) to $\{0,1,\ldots,6\}$ (diatonic pitch \emph{class} space). Arithmetic
+in this group is mod-7, exactly in the way that arithmetic using the more
+familiar chromatic pitch class space, $\{0,1,2,\ldots,11\}$, is mod-12.
 
 Lewin specifies that IVLS must be a mathematical group, and we will take care
-to show that IVLS = $\{t_0,t_1,\ldots,t_6\}$ is indeed such a group. A group
+here to show that IVLS = $\{0,1,\ldots,6\}$ is indeed such a group. A group
 is a set of elements, $G$, and a binary operaton, $\otimes$, that satisies the
 four group axioms:
 \begin{compactitem}
@@ -619,57 +619,57 @@ four group axioms:
     true.\fn{ds-4}
 \end{compactitem}
 
-To show that IVLS is a group, it is sufficient to show that the set
-$\{t_0,t_1,\ldots,t_6\}$ under some binary operation satisfies the group
-axioms. The binary operation is addition of subscripts, performed mod-7 (which
-we will denote $\oplus$ instead of $\otimes$ to avoid the implication of
-multiplication); to determine the result of $t_1 \oplus t_3$, simply add the
-subscripts to get $t_4$. We can then show that the set IVLS is closed: for any
-two elements $a, b \in \mathrm{IVLS}$, $a \oplus b$ is also an element of IVLS
-($t_1 \oplus t_3 = t_4; t_4 \oplus t_4 = t_1; t_1 \oplus t_0 = t_1$; and so
-on). Because modular addition is associative, we know that $\oplus$ is
-associative as well: $(t_1 \oplus t_2) \oplus t_3 = t_1 \oplus (t_2 \oplus
-t_3)$, and likewise for any chosen elements of IVLS. The identity element of
-the group is $t_0$, which combined with any element $a \in \mathrm{IVLS}$ gives $a$
-itself. Inverses in the group are simply complements mod-7: $t_2^{-1} = t_5;
-t_1^{-1} = t_6$; and so on. IVLS is isomorphic to the group $G =
-(\mathbb{Z}_7, +)$, and it also a cyclic group generated by the element $t_1$,
-so we will label it $\mathcal{C}_7$.
+To show that our IVLS is a group, it is sufficient to show that the set
+$\{0,1,\ldots,6\}$ under some binary operation satisfies the group axioms. The
+binary operation is simply addition mod-7 (we will notate using the usual $+$
+sign instead of the abstract $\otimes$ used above).  We can then show that the
+set IVLS is closed: for any two elements $a, b \in \mathrm{IVLS}$, $a + b$ is
+also an element of IVLS ($1 + 3 = 4; 4 + 4 = 1; 1 + 0 = 1$; and so on).
+Modular addition, like its non-modular counterpart, is associative:
+$(3 + 4) + 5 = 3 + (4 + 5)$, and likewise for any chosen elements of IVLS.
+The identity element for addition is 0, which combined with any element $a \in
+\mathrm{IVLS}$ gives $a$ itself. Inverses in the group are simply complements
+mod-7 (the number that when added to the given number gives 0, mod-7):
+$2^{-1} = 5; 1^{-1} = 6$; and so on. The integers modulo $n$ are labeled
+$\intZ_n$, so we may also refer to IVLS in our “Autumn Leaves” example as
+the group $\intZ_7$.
 
 The last element of a GIS is an interval function that maps $S \times S$ into
 IVLS. In other words, the interval from one element of S to another must be a
-member of the group $\mathcal{C}_7$, discussed at length above. In our “Autumn
-Leaves” example, the operator $t_k$ transposes the root of a chord $k$ steps
-inside the G-minor diatonic collection, so the interval from one element of S
-to another is that $t_k$ operator that produces the desired transposition.
-Thus, \mbox{int(\h{D7}, \h{GmM7} = $t_3$}, since transposing the root, D,
-three steps inside the G-minor diatonic collection gives G. Likewise,
-\mbox{int(\h{Am7b5}, \h{BbM7}) = $t_1$}; \mbox{int(\h{F7}, \h{EbM7}) = $t_6$};
-and so on.
+member of the group $\intZ_7$. In our “Autumn Leaves” example, the interval
+from one element of S to another is simply the number of steps in the G-minor
+diatonic collection (always counting upward) between the two elements. Thus,
+\mbox{int(\h{D7}, \h{GmM7}) = 3}, since G, the root of the second chord, lies
+3 diatonic steps above D, the root of the first. Likewise,
+\mbox{int(\h{Am7b5}, \h{BbM7}) = 1}; \mbox{int(\h{F7}, \h{EbM7}) = 6}; and so
+on.
 
-% xxx did jay say something about this in the proposal?
 We now have all of the elements of a GIS, but we must still prove that Lewin’s
 conditions A and B are satisfied, which we will do by example. Condition A
 states that for all r, s, and t in S, \mbox{int(r,s)int(s,t) = int(r,t)}. In
-our “Autumn Leaves” example, \mbox{int(Cm7,D7)int(D7,\h{EbM7})} must equal
-\mbox{int(Cm7,\h{EbM7})}: $t_1t_1 = t_2$. Second, for every chord $s$ in S and
-every interval $i$ in $\mathcal{C}_7$, there must be a unique chord $t$ which
-satisfies the equation \mbox{int$(s,t) = i$}. For example, there must be
-exactly one chord that lies $t_2$ units from \h{Cm7}: namely, \h{EbM7}.
+our “Autumn Leaves” example, \mbox{int(Cm7, D7)} and \mbox{int(D7, \h{EbM7})}
+(both interval 1) must combine to equal \mbox{int(Cm7, \h{EbM7})} (interval
+2). Second, for every chord $s$ in S and every interval $i$ in $\intZ_7$,
+there must be a unique chord $t$ which satisfies the equation \mbox{int$(s,t)
+= i$}. For example, there must be exactly one chord that lies $2$ units above
+\h{Cm7}: namely, \h{EbM7}. It is easy to confirm that the two conditions
+are also true for any choice of r, s, t $\in$ S.
 
-% xxx need a bit about converting GIS thinking to transformational thinking
-% (Rings sec 1.3.3)
+% xxx to do here
+% * converting GIS thinking to transformational thinking (intervals become t_k)
+%   (Rings sec 1.3.3)
+% * can generate the group by different elements, since 7 is prime
 
 % xxx expand this conclusion
-Understood in this way, the chord progression of the A section of “Autumn
-Leaves,” and consequently the circle of fifths arrangement in Figure
-\ref{ds:circle-of-fifths}, can be understood as a series of $t_3$ transformations
-within this G-minor diatonic seventh-chord space. In mod-12 chromatic space,
-it can be difficult to make sense of this harmonic progression. The chord
-qualities can be confusing (two major sevenths in a row followed immediately
-by a half-diminished seventh), and it is sometimes hard to remember where the
-tritone in the bass falls in the progression, given the prevalence of
-perfect-fifth bass motion in the chromatic space. Understood in the context of
-this diatonic space, however, the harmonic motion becomes much clearer.
+% Understood in this way, the chord progression of the A section of “Autumn
+% Leaves,” and consequently the circle of fifths arrangement in Figure
+% \ref{ds:circle-of-fifths}, can be understood as a series of $t_3$ transformations
+% within this G-minor diatonic seventh-chord space. In mod-12 chromatic space,
+% it can be difficult to make sense of this harmonic progression. The chord
+% qualities can be confusing (two major sevenths in a row followed immediately
+% by a half-diminished seventh), and it is sometimes hard to remember where the
+% tritone in the bass falls in the progression, given the prevalence of
+% perfect-fifth bass motion in the chromatic space. Understood in the context of
+% this diatonic space, however, the harmonic motion becomes much clearer.
 
 %}}}
