Add paragraph about multiple generation of Z7.

--- a/diss.bib
+++ b/diss.bib
@@ -271,6 +271,15 @@ Theory} }
   year        = {2007}
 }
 
+@article{hook:2007gmit,
+  author      = {Hook, Julian},
+  title       = {David Lewin and the Complexity of the Beautiful},
+  journal     = {Intégral},
+  volume      = {21},
+  pages       = {155--190},
+  year        = {2007}
+}
+
 @review{hook:2011,
   author      = {Hook, Julian},
   title       = {Review of Dmitri Tymoczko, \textit{A Geometry of Music:
