Text about converting GISs to transformations.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -238,11 +238,36 @@ throughout]{rings:2011}.}
   and circle of fifths (or fourths) cycle through all 12 pitches in the
   chromatic octave before returning to the starting point.}
 
-% moved, since $t_k$ is a transformation, not an interval
-\fntext{ds-3}{%
+\fntext{ds-5a}{%
+  To avoid confusion, we will use only the GIS that measures distance in
+  diatonic steps from this point on.}
+
+\fntext{ds-6}{%
+  \cite[159]{lewin:gmit}. Henry Klumpenhouwer argues that the dichotomy
+  between Cartesian GIS thinking and what he calls “anti-Cartesian”
+  transformational thinking is \emph{the} central theme of \emph{GMIT}; see
+  \headlesscite{klumpenhouwer:2006}. For more on the “transformational
+  attitude,” see \cite[24--29]{rings:2011}; \cite{satyendra:2004}; and
+  \cite[172--77]{hook:2007gmit}.}
+
+\fntext{ds-7}{%
+  Ramon Satyendra describes the two attitudes as being noun-oriented (GISs)
+  vs. verb-oriented (transformations); \headlesscite[102--3]{satyendra:2004}.}
+
+\fntext{ds-8}{%
+  \cite[160]{lewin:gmit}, emphasis original. Julian Hook clarifies this point
+  in \headlesscite[172--77]{hook:2007gmit}.}
+
+\fntext{ds-9}{%
   The operator $t_k$ is described as a “generic transposition operator” in
   \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
-  since I am interested at this point only in its application to the diatonic
-  set S.}
+  since I am interested at this point only in its application to the G-minor
+  diatonic set S.}
 
+\fntext{ds-10}{%
+  The intervals chosen for measurement in the GIS do have an impact on the
+  associated transformational system: if we had used the descending fifths
+  generation as described above, the the operator $t_1$ (not $t_3$) would map
+  \h{Am7b5} onto \h{D7}, since the interval in the underlying GIS would be
+  different.}
 % }}}
