--- a/diss.bib
+++ b/diss.bib
@@ -276,7 +276,7 @@ Theory} }
   title       = {David Lewin and the Complexity of the Beautiful},
   journal     = {Intégral},
   volume      = {21},
-  pages       = {155--190},
+  pages       = {155--90},
   year        = {2007}
 }
 
@@ -339,6 +339,19 @@ Theory} }
   year        = {2006}
 }
 
+@article{klumpenhouwer:2006,
+  author      = {Klumpenhouwer, Henry},
+  title       = {In Order to Stay Asleep as Observers: The Nature and Origins
+                of Anti-Cartesianism in Lewin's \textit{Generalized Musical
+                Intervals and Transformations}},
+  journal     = {Music Theory Spectrum},
+  volume      = {28},
+  number      = {2},
+  pages       = {277--89},
+  year        = {2006},
+  issue       = {Fall}
+}
+
 @article{larson:1996,
   author      = {Larson, Steve},
   title       = {Strict Use of Analytic Notation},
@@ -355,7 +368,7 @@ Theory} }
   journal     = {Music Theory Spectrum},
   volume      = {20},
   number      = {2},
-  pages       = {209--241},
+  pages       = {209--41},
   month       = oct,
   year        = {1998}
 }
@@ -588,6 +601,19 @@ Theory} }
   volume      = {13},
   pages       = {13--25},
   year        = {2003}
+}
+
+@article{satyendra:2004,
+  author      = {Ramon Satyendra},
+  title       = {An Informal Introduction to Some Formal Concepts from
+                Lewin's Transformational Theory},
+  shorttitle  = {An Informal Introduction},
+  journal     = {Journal of Music Theory},
+  volume      = {48},
+  number      = {1},
+  pages       = {99--141},
+  year        = {2004},
+  issue       = {Spring}
 }
 
 @book{schenker:fantasy,
