--- a/headers.tex
+++ b/headers.tex
@@ -125,6 +125,10 @@
   singlelinecheck = false,
 ]{caption}
 
+
+\usepackage{marginnote}
+\newcommand{\sidenote}[1]{\marginnote{\singlespacing\footnotesize#1}}
+
 % misc. formatting
 % ----------------
 \usepackage{datetime}
