--- a/ch1.tex
+++ b/ch1.tex
@@ -531,10 +531,9 @@ by David Lewin in \emph{Generalized Musical Intervals and Transformations},
 and a review of the approach found there will be useful before moving on
 to more involved examples.
 
-\subsection{Generalized Intervals and Transformations}
-\label{subsec:gistrans} % {{{{
+\subsection{Intervals and Transformations}
+\label{subsec:inttrans} % {{{{
 
-% xxx revise me
 Figure \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
 on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians typically refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
@@ -672,7 +671,7 @@ case---it does affect the last element of a GIS, the interval
 function.\fn{ds-5} As shown in Figure \ref{ds:c7-generators},
 \mbox{int(\h{Am7b5}, D7) = 3} when measured by diatonic steps (the left
 figure), but \mbox{int(\h{Am7b5}, D7) = 1} when measured by descending fifths
-(the right figure).
+(the right figure).\fn{ds-5a}
 
 \figBeg
   \centerGraphic{eps/ch1/c7-generators.pdf}
@@ -682,20 +681,83 @@ figure), but \mbox{int(\h{Am7b5}, D7) = 1} when measured by descending fifths
   \label{ds:c7-generators}
 \figEnd
 
-% xxx to do here
-% * converting GIS thinking to transformational thinking (intervals become t_k)
-%   (Rings sec 1.3.3)
+Generalized Interval Systems are but one part of Lewin’s project; we will now
+turn our attention to the “transformations” of the book’s title. Much has been
+made of the “transformational attitude” that accompanies the shift from
+generalized intervals to transformations that occurs in the later chapters of
+\emph{GMIT}. As Lewin has it, GIS thinking represents a Cartesian, observer-
+oriented position, examining musical objects as points in abstract space. This
+is in contrast to the transformational attitude, which Lewin describes as
+“much less Cartesian” in what is perhaps the most-cited portion of the book:
+\begin{quoting}
+  \singlespacing
+  Given locations s and t in our space, this attitude does not ask for some
+  observed measure of extension between reified “points”; rather it asks: “If
+  I am \emph{at} s and wish to get to t, what characteristic gesture
+  (e.g.~member of STRANS) should I perform in order to arrive
+  there?\fn{ds-6}
+\end{quoting}
+
+The GIS perspective outlined above is an intervallic perspective: we developed
+a system that allowed us to say that “the distance from \h{Am7b5} to \h{D7} is
+3.” By replacing, as Lewin does, “the concept of interval-in-a-GIS” with “the
+concept of transposition-operation-on-a-space,”\footcite[157]{lewin:gmit} we
+can convert this GIS statement into a transformational one: “transposing the
+root of \h{Am7b5} by three diatonic steps gives \h{D7}.” The transformational
+statement is more active, replacing distance metrics with verbs like
+“transpose.”\fn{ds-7}
+
+Though there is certainly a difference in the language used in GIS statments
+and that used in transformational statements, Lewin takes care to note that
+the two attitudes are not diametrically opposed to one another:
+\begin{quoting}
+  \singlespacing
+  we do not have to choose \emph{either} interval-language \emph{or}
+  transposition-language; the generalizing power of transformational theory
+  enables us to consider them as two aspects of one phenomenon, manifest in
+  two different aspects of this musical composition.\fn{ds-8}
+\end{quoting}
+While we might prefer interval-language in some contexts and
+transformation-language in others, the two attitudes are quite closely
+related; any GIS statement can be converted into a transformational one by
+using the mechanism Lewin describes just before the famous passage in
+\emph{GMIT}.
+
+By combining the space S of a GIS with an operation-group on S, we can derive
+a transformational system. This operation-group must be simply transitive on S
+(hence the reference to STRANS in the quote above): “given any elements s and
+t of S, then there exists a unique member OP of STRANS such that OP(s) =
+1.”\footcite[157]{lewin:gmit} Lewin then states that in any GIS, “there is a
+unique transposition-operation T satisfying T(s) = T, namely T =
+T\tsub{int(s,t)}.\footcite[157]{lewin:gmit} In familiar chromatic pitch-class
+space, the unique transposition $T_k$ is that operation where $k$ is the
+interval in semitones between the two pitches: the interval between C and
+\Eflat\ is 3, and the operator $T_3$ maps C onto \Eflat.
+
+Converting our “Autumn Leaves” GIS into a transformational system, then, is
+only slightly more complicated, since ordinary transposition will not work
+intuitively. To avoid confusion with the traditional transposition operator,
+we will instead use the lowercase, $t_k$.\fn{ds-9} This diatonic transposition
+operator will be used in almost the same way, however: the operation $t_k$ is
+that tranposition which transposes the root of a chord $k$ steps inside the
+G-minor diatonic collection. With this understanding, the conversion works as
+expected: the interval between \h{Am7b5} and \h{D7} is 3, so the operator
+$t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{GmM7},}
+\h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7}, \h{F7}\}.\fn{ds-10} The same
+statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
+want to emphasize the mapping of a particular transformation.
 
 % xxx expand this conclusion
-% Understood in this way, the chord progression of the A section of “Autumn
-% Leaves,” and consequently the circle of fifths arrangement in Figure
-% \ref{ds:circle-of-fifths}, can be understood as a series of $t_3$ transformations
-% within this G-minor diatonic seventh-chord space. In mod-12 chromatic space,
-% it can be difficult to make sense of this harmonic progression. The chord
-% qualities can be confusing (two major sevenths in a row followed immediately
-% by a half-diminished seventh), and it is sometimes hard to remember where the
-% tritone in the bass falls in the progression, given the prevalence of
-% perfect-fifth bass motion in the chromatic space. Understood in the context of
-% this diatonic space, however, the harmonic motion becomes much clearer.
+Using this GIS and its associated transformational system, the chord
+progression of the A section of “Autumn Leaves,” and consequently the circle
+of fifths arrangement in Figure \ref{ds:circle-of-fifths}, can be understood
+as a series of $t_3$ operations within a G-minor diatonic seventh-chord
+space. In mod-12 chromatic space, it can be difficult to make sense of this
+harmonic progression. The chord qualities can be confusing (two major sevenths
+in a row followed immediately by a half-diminished seventh), and it is
+sometimes hard to remember where the tritone in the bass falls in the
+progression, given the prevalence of perfect-fifth bass motion in the
+chromatic space. Understood in the context of this diatonic space, however,
+the harmonic motion becomes much clearer.
 
 %}}}
