Add sect. conclusion, start analytical commentary.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -209,7 +209,7 @@ throughout]{rings:2011}.}
 % }}}
 
 % Diatonic Chord Space {{{
-
+  % Intervals and transformations{{{{
 \fntext{ds-2a}{%
   \emph{The Real Book} gives these changes in E minor, but most recorded
   performances are in G minor. I have transposed the given changes to reflect
@@ -270,4 +270,9 @@ throughout]{rings:2011}.}
   generation as described above, the the operator $t_1$ (not $t_3$) would map
   \h{Am7b5} onto \h{D7}, since the interval in the underlying GIS would be
   different.}
+
+  % }}}}
+
+  % Analytical Applications {{{{
+  % }}}}
 % }}}
