--- a/ch1.tex
+++ b/ch1.tex
@@ -747,17 +747,74 @@ $t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{GmM7},}
 statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
 want to emphasize the mapping of a particular transformation.
 
-% xxx expand this conclusion
-Using this GIS and its associated transformational system, the chord
-progression of the A section of “Autumn Leaves,” and consequently the circle
-of fifths arrangement in Figure \ref{ds:circle-of-fifths}, can be understood
-as a series of $t_3$ operations within a G-minor diatonic seventh-chord
-space. In mod-12 chromatic space, it can be difficult to make sense of this
-harmonic progression. The chord qualities can be confusing (two major sevenths
-in a row followed immediately by a half-diminished seventh), and it is
+Now that we have explored the underlying mathematics, we are in a position to
+reexamine the A section of “Autumn Leaves,” (as given in Figure
+\ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths arrangement in
+Figure \ref{ds:circle-of-fifths}. The progression is, quite simply, a series
+of $t_3$ operations within the G-minor diatonic space.
+In a mod-12 chromatic space (like the ones we will begin developing in the
+next chapter) it can be difficult to make sense of this
+harmonic progression. The chord qualities can be confusing---two major sevenths
+in a row followed immediately by a half-diminished seventh---and it is
 sometimes hard to remember where the tritone in the bass falls in the
-progression, given the prevalence of perfect-fifth bass motion in the
+progression, given the prevalence of perfect-fifth bass motion in
 chromatic space. Understood in the context of this diatonic space, however,
 the harmonic motion becomes much clearer.
+
+It is reasonable to pause at this point and ask what advantages this
+transformational approach brings. After all, we began our discussion of
+“Autumn Leaves” by noting that jazz musicians sometimes refer to the
+progression of the A section as a “diatonic cycle,” and it may seem as though
+we have gone through a great deal of mathematical rigmarole simply to arrive
+back at our starting point. There would seem to be very little difference
+between describing a progression as a “diatonic cycle” and describing it as “a
+series of $t_3$ transformations in the G-minor diatonic set of seventh
+chords.” And yet, this is exactly the point. By beginning with something jazz
+musicians know (that “Autumn Leaves” contains a diatonic cycle) and then
+applying transformational techniques, we can demonstrate that the gap between
+the way jazz musicians discuss harmony need not be as far removed from the way
+music theorists tend to discuss jazz harmony. The mathematical language used
+by the theory is but a means to an end---a way of translating what is often
+intuitive knowledge for jazz musicians (not a group well-known for their
+rigorous use of language) to a language more familiar to music theorists.
+
+% }}}}
+
+\subsection{Analytical Applications}
+\label{subsec:analytical-applications} % {{{{
+\FloatBarrier
+
+Before concluding this chapter, it will be useful to examine “Autumn Leaves”
+in a bit more detail, then move on to a few other analytical applications. The
+full chord changes to “Autumn Leaves” are given in Figure
+\ref{ds:autumn-leaves-complete}. The opening A section, discussed at length
+above, can be understood as a series of $t_3$ operations in the G-minor
+diatonic set. The bridge modulates to the relative major, but we can still
+understand this passage using the same transformational system. After
+retracing the same harmonic ground in the first four measures of the bridge,
+the entire progression is transposed up a third (a larger-scale $t_2$) to
+repeat the \tfo\ progression in the key of \Bflat. Despite this modulation,
+though, the connections from chord to chord are all $t_3$ operations,
+continuing the cycle (diatonic to G minor) that has been present since the
+beginning (see Figure \ref{ds:autumn-leaves-bridge}).
+
+\figBeg
+  \centerGraphic{eps/xxx.pdf}
+  \caption{The complete changes to “Autumn Leaves.”}
+  \label{ds:autumn-leaves-complete}
+\figEnd
+
+\figBeg
+  \centerGraphic{eps/xxx.pdf}
+  \caption{A transformational network for “Autumn Leaves,” bridge.}
+  \label{ds:autumn-leaves-bridge}
+\figEnd
+
+% TODO here:
+%   - connection between bridge and last 8; t6 = two t3s
+%   - how G- C7 F- Bb7 requires a new space (ii-V space), though the root
+%     progression is "correct"
+
+% }}}}
 
 %}}}
