Minor edits; adding Autumn Leaves graphics.

--- a/ch1.tex
+++ b/ch1.tex
@@ -770,13 +770,12 @@ back at our starting point. There would seem to be very little difference
 between describing a progression as a “diatonic cycle” and describing it as “a
 series of $t_3$ transformations in the G-minor diatonic set of seventh
 chords.” And yet, this is exactly the point. By beginning with something jazz
-musicians know (that “Autumn Leaves” contains a diatonic cycle) and then
-applying transformational techniques, we can demonstrate that the gap between
-the way jazz musicians discuss harmony need not be as far removed from the way
-music theorists tend to discuss jazz harmony. The mathematical language used
-by the theory is but a means to an end---a way of translating what is often
-intuitive knowledge for jazz musicians (not a group well-known for their
-rigorous use of language) to a language more familiar to music theorists.
+musicians know and then applying transformational techniques, we can
+demonstrate that the gap between the way jazz musicians discuss harmony need
+not be far removed from the way music theorists discuss jazz harmony. The
+mathematical language used by the theory is but a means to an end---a way of
+translating what is often intuitive knowledge for jazz musicians to a language
+more familiar to music theorists.
 
 % }}}}
 
@@ -799,14 +798,15 @@ continuing the cycle (diatonic to G minor) that has been present since the
 beginning (see Figure \ref{ds:autumn-leaves-bridge}).
 
 \figBeg
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch1/autumn-leaves-complete.pdf}
   \caption{The complete changes to “Autumn Leaves.”}
   \label{ds:autumn-leaves-complete}
 \figEnd
 
 \figBeg
-  \centerGraphic{eps/xxx.pdf}
-  \caption{A transformational network for “Autumn Leaves,” bridge.}
+  \vspace{\baselineskip}
+  \centerGraphic{eps/ch1/autumn-leaves-bridge.pdf}
+  \caption{A transformation network for “Autumn Leaves,” bridge.}
   \label{ds:autumn-leaves-bridge}
 \figEnd
 
