Crappy text to finish Autumn Leaves discussion.

--- a/ch1.tex
+++ b/ch1.tex
@@ -783,8 +783,8 @@ more familiar to music theorists.
 \label{subsec:analytical-applications} % {{{{
 \FloatBarrier
 
-Before concluding this chapter, it will be useful to examine “Autumn Leaves”
-in a bit more detail, then move on to a few other analytical applications. The
+Before concluding this chapter, we will examine “Autumn Leaves”
+in a bit more detail, then move on to a few other analytical examples. The
 full chord changes to “Autumn Leaves” are given in Figure
 \ref{ds:autumn-leaves-complete}. The opening A section, discussed at length
 above, can be understood as a series of $t_3$ operations in the G-minor
@@ -810,10 +810,26 @@ beginning (see Figure \ref{ds:autumn-leaves-bridge}).
   \label{ds:autumn-leaves-bridge}
 \figEnd
 
-% TODO here:
-%   - connection between bridge and last 8; t6 = two t3s
-%   - how G- C7 F- Bb7 requires a new space (ii-V space), though the root
-%     progression is "correct"
+% xxx this writing is terrible
+Two more observations will suffice to complete our discussion of “Autumn
+Leaves.” The first is the connection from the end of the bridge to the
+beginning of the final A section, \h{Bbmaj7}--\h{Am7b5}. This connection is
+one of only two thus far that is not a $t_3$ (the other, a $t_1$, occurs at
+the beginning of the bridge). Instead, we can understand the $t_6$ between
+\h{Bbmaj7} and \h{Am7b5} as a combination of two $t_3$ operations, imagining
+that there is a “missing” \h{EbM7} chord in the last bar of the bridge.
+Interpolating this chord allows us to hear this progression as identical to
+that of the first eight bars, now displaced four bars to span a formal
+boundary.
+
+The only four chords in “Autumn Leaves” that cannot be understood in the GIS
+developed above are those in the third and fourth bars of the final A section:
+\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}. While the chord roots do belong to the
+G-minor collection, the qualities do not. Instead, these chords are \tf\
+progressions; these progressions are best understood in chromatic space,
+rather than diatonic space, which we will develop in the next chapter.
+
+
 
 % }}}}
 
