Change GmM7 to Gm throughout.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -218,9 +218,16 @@ throughout]{rings:2011}.}
 \fntext{ds-2}{%
   In running text, dominant seventh chords are given with just a “7,” major
   sevenths with “M7,” minor sevenths with “m7,” and half-diminished sevenths
-  with “\h{m7f5}”. In a minor key the tonic chord is typically played with a
+  with “\h{m7b5}”. In a minor key the tonic chord is often played with a
   major seventh, which is indicated “mM7.” In examples, chord symbols
   typically follow conventions used by \emph{The Real Book}.}
+
+\fntext{ds-3}{%
+  The tonic harmony is given as it is in \emph{The Real Book}, simply as Gm.
+  In performance, a musician might choose to play this chord with a major
+  seventh (\h{GmM7}), a sixth (\h{Gm6}), or even a minor seventh (\h{Gm7}; this
+  is less likely since minor seventh chords are most commonly ii chords, not
+  tonics).}
 
 \fntext{ds-4}{%
   Lewin’s definition of a mathematical group is spread over several pages in
