--- a/ch1.tex
+++ b/ch1.tex
@@ -586,8 +586,8 @@ pitch-class spaces as well as less familiar musical spaces like frequency
 space, time point space, and various durational
 spaces.\footcite[16--25]{lewin:gmit} In our “Autumn Leaves” example, we are
 interested in the (unordered) set of harmonies in the G-minor diatonic cycle:
-\mbox{$S =$ \{\h{GmM7},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7},
-\h{F7}\}.
+\mbox{$S =$ \{\h{Gm},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7},
+\h{F7}\}.\fn{ds-3}
 
 With the first element of a GIS satisfied, we must then define a group of
 intervals (IVLS). Though we could perhaps imagine a number of different ways
@@ -639,7 +639,7 @@ IVLS. In other words, the interval from one element of S to another must be a
 member of the group $\intZ_7$. In our “Autumn Leaves” example, the interval
 from one element of S to another is simply the number of steps in the G-minor
 diatonic collection (always counting upward) between the two elements. Thus,
-\mbox{int(\h{D7}, \h{GmM7}) = 3}, since G, the root of the second chord, lies
+\mbox{int(\h{D7}, \h{Gm}) = 3}, since G, the root of the second chord, lies
 3 diatonic steps above D, the root of the first. Likewise,
 \mbox{int(\h{Am7b5}, \h{BbM7}) = 1}; \mbox{int(\h{F7}, \h{EbM7}) = 6}; and so
 on.
@@ -742,7 +742,7 @@ operator will be used in almost the same way, however: the operation $t_k$ is
 that tranposition which transposes the root of a chord $k$ steps inside the
 G-minor diatonic collection. With this understanding, the conversion works as
 expected: the interval between \h{Am7b5} and \h{D7} is 3, so the operator
-$t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{GmM7},}
+$t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{Gm},}
 \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7}, \h{F7}\}.\fn{ds-10} The same
 statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
 want to emphasize the mapping of a particular transformation.
