Edit miserable text from yesterday.

--- a/ch1.tex
+++ b/ch1.tex
@@ -783,9 +783,9 @@ more familiar to music theorists.
 \label{subsec:analytical-applications} % {{{{
 \FloatBarrier
 
-Before concluding this chapter, we will examine “Autumn Leaves”
-in a bit more detail, then move on to a few other analytical examples. The
-full chord changes to “Autumn Leaves” are given in Figure
+Before concluding this chapter, I want to examine “Autumn Leaves” in a bit
+more detail, then move on to a few other analytical examples. The full chord
+changes to “Autumn Leaves” are given in Figure
 \ref{ds:autumn-leaves-complete}. The opening A section, discussed at length
 above, can be understood as a series of $t_3$ operations in the G-minor
 diatonic set. The bridge modulates to the relative major, but we can still
@@ -793,9 +793,9 @@ understand this passage using the same transformational system. After
 retracing the same harmonic ground in the first four measures of the bridge,
 the entire progression is transposed up a third (a larger-scale $t_2$) to
 repeat the \tfo\ progression in the key of \Bflat. Despite this modulation,
-though, the connections from chord to chord are all $t_3$ operations,
-continuing the cycle (diatonic to G minor) that has been present since the
-beginning (see Figure \ref{ds:autumn-leaves-bridge}).
+the connections from chord to chord are all $t_3$ operations, continuing the
+chain that has been present since the beginning (see Figure
+\ref{ds:autumn-leaves-bridge}).
 
 \figBeg
   \centerGraphic{eps/ch1/autumn-leaves-complete.pdf}
@@ -810,24 +810,43 @@ beginning (see Figure \ref{ds:autumn-leaves-bridge}).
   \label{ds:autumn-leaves-bridge}
 \figEnd
 
-% xxx this writing is terrible
-Two more observations will suffice to complete our discussion of “Autumn
-Leaves.” The first is the connection from the end of the bridge to the
-beginning of the final A section, \h{Bbmaj7}--\h{Am7b5}. This connection is
-one of only two thus far that is not a $t_3$ (the other, a $t_1$, occurs at
-the beginning of the bridge). Instead, we can understand the $t_6$ between
-\h{Bbmaj7} and \h{Am7b5} as a combination of two $t_3$ operations, imagining
-that there is a “missing” \h{EbM7} chord in the last bar of the bridge.
-Interpolating this chord allows us to hear this progression as identical to
-that of the first eight bars, now displaced four bars to span a formal
-boundary.
+There are three passages in this piece that are not simply $t_3$ operations:
+the connection from \h{Gm} to \h{Am7b5} that begins the bridge; the connection
+from \h{BbM7} at the end of the bridge to \h{Am7b5} that follows; and the
+third and fourth bars of the final A section,
+\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}. The first of these, \h{Gm}--\h{Am7b5}, is a
+$t_1$ transformation. The bridge begins by retracing the same harmonic ground
+as the last four bars of the A section (a \tfo\ progression in G minor); the
+connection to the bridge, then, can be understood as the inverse of the two
+descending fifths that ended the A section. This observation can be
+represented mathematically ($t_3^{-1} + t_3^{-1} = t_4 + t_4 = t_1$) or
+graphically (by taking two steps counterclockwise in the circle of fifths in
+Figure \ref{ds:circle-of-fifths}).
+
+The next transformation that breaks the series of $t_3$ operations is the
+$t_6$ from \h{BbM7} to \h{Am7b5} at the end of the bridge. This $t_6$ is
+easily understood as a combination of two $t_3$ operations, imagining that
+there is a “missing” \h{EbM7} chord in the last bar of the bridge.\fn{ds-11}
+Interpolating this chord allows us to hear the progression (beginning on
+\h{Cm7}) as identical to that of the first eight bars, now displaced to span a
+formal boundary, as shown in see Figure \ref{ds:displaced-cycle}.\fn{ds-12}
+
+\figBeg
+  \centerGraphic{eps/xxx.pdf}
+  \caption{The diatonic cycle of “Autumn Leaves,” with a hypermetrically
+    displaced copy.}
+  \label{ds:displaced-cycle}
+\figEnd
 
 The only four chords in “Autumn Leaves” that cannot be understood in the GIS
-developed above are those in the third and fourth bars of the final A section:
-\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}. While the chord roots do belong to the
-G-minor collection, the qualities do not. Instead, these chords are \tf\
-progressions; these progressions are best understood in chromatic space,
-rather than diatonic space, which we will develop in the next chapter.
+developed above are those in the progression
+\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}.  While the chord roots belong to the
+G-minor collection, the qualities are incorrect. This progression consists of
+two \mbox{ii\tsup{7}--V\tsup{7}} progressions, the first in F and the second
+in \Eflat\ (which again does not appear in the music, like at the end of the
+bridge). These \tf\ progressions are best stood in chromatic, rather than
+diatonic, space; for now, we will pass over this progression until we have
+developed such a space.
 
 
 
