--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -280,6 +280,19 @@ throughout]{rings:2011}.}
 
   % }}}}
 
-  % Analytical Applications {{{{
+% Analytical Applications {{{{
+\fntext{ds-11}{%
+  This observation has not gone unrecognized by jazz musicians: at least one
+  recording (Vince Guaraldi, on the album \emph{Jazz Impressions}) includes
+  the \h{VImaj7} chord in this measure, though most do not.}
+
+\fntext{ds-12}{%
+  Hearing this parallelism also requires hearing the \h{Gm7} in the third bar
+  of the final A section as equivalent to the cadential \h{Gm} in the first.
+  The chord symbol \h{Gm} is ambiguous by nature; if a performer wanted to
+  bring out this parallelism, she could perhaps play the tonic chords in the
+  first A section as minor seventh chords.}
+
   % }}}}
+
 % }}}
