--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -283,8 +283,9 @@ throughout]{rings:2011}.}
 % Analytical Applications {{{{
 \fntext{ds-11}{%
   This observation has not gone unrecognized by jazz musicians: at least one
-  recording (Vince Guaraldi, on the album \emph{Jazz Impressions}) includes
-  the \h{VImaj7} chord in this measure, though most do not.}
+  recording (Vince Guaraldi, on the album \emph{A Flower is a Lovesome
+  Thing}\nocite{guaraldi:flower}) includes the \h{VImaj7} chord in this
+  measure, though most do not.}
 
 \fntext{ds-12}{%
   Hearing this parallelism also requires hearing the \h{Gm7} in the third bar
