Add displaced cycle graphic.

--- a/ch1.tex
+++ b/ch1.tex
@@ -829,12 +829,12 @@ easily understood as a combination of two $t_3$ operations, imagining that
 there is a “missing” \h{EbM7} chord in the last bar of the bridge.\fn{ds-11}
 Interpolating this chord allows us to hear the progression (beginning on
 \h{Cm7}) as identical to that of the first eight bars, now displaced to span a
-formal boundary, as shown in see Figure \ref{ds:displaced-cycle}.\fn{ds-12}
+formal boundary, as shown in Figure \ref{ds:displaced-cycle}.\fn{ds-12}
 
 \figBeg
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch1/displaced-cycle.pdf}
   \caption{The diatonic cycle of “Autumn Leaves,” with a hypermetrically
-    displaced copy.}
+    displaced copy spanning the formal boundary at the end of the bridge.}
   \label{ds:displaced-cycle}
 \figEnd
 
