Add Ahmad Jamal recording.
He plays the VI chord in the bridge of All the Things You Are, which
we'll analyze sometime in this chapter.

--- a/discog.bib
+++ b/discog.bib
@@ -10,3 +10,15 @@
   type        = {CD},
   userd       = {Fantasy 3-257,}
 }
+
+@music{jamal:pershing,
+  author      = {Jamal, Ahmad},
+  title       = {Jamal at the Pershing, Vol. 2},
+  userd       = {Argo LP-667,},
+  origdate    = {1961},
+  type        = {CD},
+  series      = {Available on \textit{Complete Live at the Pershing Lounge
+                 1958}. Gambit},
+  number      = {69264},
+  year        = {2007},
+}
