Change to package subfiles for compilation.
This makes it easier to deal with compiling single chapters, sections,
or whatever.

--- a/ch1.tex
+++ b/ch1.tex
@@ -1,5 +1,7 @@
-% Chapter 1
-% vim:fdm=marker
+%% Chapter 1
+\documentclass[diss]{subfiles}
+\input{ch1-notes.tex}
+\begin{document}
 
 \chapter{Introduction}
 
@@ -853,3 +855,7 @@ developed such a space.
 % }}}}
 
 %}}}
+
+\end{document}
+
+% vim:fdm=marker
