Convert headers to a package file.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -1,4 +1,7 @@
-%% headers.tex %%
+%% mjmdiss.sty %%
+%% Style file for the dissertation.
+
+\ProvidesPackage{mjmdiss}
 
 % misc. TeX settings
 % ------------------
