Add Alice in Wonderland analysis.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -294,6 +294,25 @@ throughout]{rings:2011}.}
   bring out this parallelism, she could perhaps play the tonic chords in the
   first A section as minor seventh chords.}
 
+\fntext{ds-13}{%
+  The most well-known recording of “Alice in Wonderland” is probably Bill
+  Evans’s on \emph{Portrait in Jazz}.\nocite{evans:portrait}}
+
+\fntext{ds-14}{%
+  The \h{Eb7} chord is a tritone substitute for \h{A7}, which is of course the
+  dominant of the following \h{Dm} chord. This harmonic motion is not easily
+  understood in either the A-minor or C-major diatonic spaces; we will return
+  to tritone substitutes in the next chapter.}
+
+\fntext{ds-15}{%
+  It is this \h{Am7} that confirms we are in a C-major diatonic space; it
+  would be more typical to transpose the \tf\ progression exactly to
+  \h{Em7}--\h{A7}.}
+
+\fntext{ds-16}{%
+  Steven Rings refers to Lewin’s “intuitions” as “apperceptions”; see
+  \headlesscite[xxx]{rings:2011}.}
+
   % }}}}
 
 % }}}
