--- a/discog.bib
+++ b/discog.bib
@@ -1,5 +1,16 @@
 % Discography
 
+@music{evans:portrait,
+  author      = {Evans, Bill},
+  title       = {Portrait in Jazz},
+  userd       = {Riverside RLP 12-315},
+  origdate    = {1960},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {OJCCD 088-2},
+  year        = {1992},
+  type        = {CD}
+}
+
 @music{guaraldi:flower,
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
