How My Heart Sings, analysis.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -295,8 +295,8 @@ throughout]{rings:2011}.}
   first A section as minor seventh chords.}
 
 \fntext{ds-13}{%
-  The most well-known recording of “Alice in Wonderland” is probably Bill
-  Evans’s on \emph{Portrait in Jazz}.\nocite{evans:portrait}}
+  The most well-known recording of “Alice in Wonderland” is probably on Bill
+  Evans’s \emph{Portrait in Jazz}.\nocite{evans:portrait}}
 
 \fntext{ds-14}{%
   The \h{Eb7} chord is a tritone substitute for \h{A7}, which is of course the
@@ -312,6 +312,18 @@ throughout]{rings:2011}.}
 \fntext{ds-16}{%
   Steven Rings refers to Lewin’s “intuitions” as “apperceptions”; see
   \headlesscite[xxx]{rings:2011}.}
+
+\fntext{ds-17}{%
+  The canonical recording of this tune is again by Bill Evans, on the album
+  \emph{How My Heart Sings!}.\nocite{evans:heartsings} Evans seems to have a
+  propensity towards tunes with diatonic cycles: \emph{Portrait in Jazz} also
+  contains a very well-known recording of “Autumn Leaves.”}
+
+\fntext{ds-18}{%
+  Exactly which chord functions as the pivot is of little importance, so long
+  as it happens before the E dominant seventh. I am inclined to hear the
+  \h{FM7} as a pivot, in order to keep both \tfo\ progressions (in C major and
+  A minor) intact.}
 
   % }}}}
 
