--- a/ch1.tex
+++ b/ch1.tex
@@ -879,10 +879,10 @@ progression here is not as systematic as the first eight (see the annotations
 in Figure \ref{ds:wonderland-transformations}). After a C-major \tf\ in
 mm.~9--10, the harmony moves up a step to \h{Em7}--\h{Am7}.\fn{ds-15} The
 progression \h{G7}--\h{Em7} seems to move backwards in the cycle, almost as if
-realizing the phrase is in danger of C major too soon. We can capture this
-intution by choosing to understand the progression not as a forward-directed
-$t_5$, but as an algebraically-equivalent combination of three ascending
-fifths ($t_3^{-1} + t_3^{-1} + t_3^{-1}$).
+realizing the phrase is in danger of arriving at C major too soon. We can
+capture this intution by choosing to understand the progression not as a
+forward-directed $t_5$, but as an algebraically-equivalent combination of
+three ascending fifths ($t_3^{-1} + t_3^{-1} + t_3^{-1}$).
 
 \figBeg[htbp]
   \centerGraphic{eps/xxx.pdf}
@@ -906,6 +906,58 @@ C-major diatonic space, hearing this connection as $t_3^{-1} + t_3^{-1} +
 t_3^{-1}$ instead represents the idea of stepping backwards through the circle
 of descending fifths (an observation that may not be easy to show using other
 methods of analysis).
+
+Both examples of outright diatonic cycles we have seen thus far have been in
+minor keys. In general, minor-key cycles are easier to use than those in major
+keys (a C-major diatonic cycle is given for reference in Figure
+\ref{ds:major-cycle}). In minor, the raised leading tone in the V chord means
+that the cycle consists of a \tfo\ in the relative major and a \tfo\ in the
+tonic joined by the VImaj7 chord, as we saw in the second cycle in Autumn
+Leaves (Figure \ref{ds:displaced-cycle}). In a major-key cycle, the lone
+half-diminished seventh chord is followed immediately by three minor seventh
+chords (in C major, \h{Bm7b5}--\h{Em7}--\h{Am7}--\h{Dm7}), which by comparison
+is a relatively unusable tonal progression.
+
+\figBeg[htbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{A diatonic cycle in C major.}
+  \label{ds:major-cycle}
+\figEnd
+
+Nevertheless, Earl Zindars’s standard “How My Heart Sings” (the changes to
+which are given in Figure \ref{ds:heart-sings-changes}) does indeed contain a
+major-key cycle.\fn{ds-17} Unlike the previous two examples, this tune begins
+on the iii chord, at which point it begins the $t_3$ cycle. Once again, it is
+the \h{Am7} chord that alerts us that this progression takes place in
+diatonic, rather than chromatic, space (\h{A7} would seem to make more
+harmonic sense, as the dominant of the following D minor). After reaching the
+tonic in m.~5, the $t_3$s continue making their way to A minor, four measures
+later.
+
+\figBeg[htbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{Changes to “How My Heart Sings” (Earl Zindars), mm.~1--16.}
+  \label{ds:heart-sings-changes}
+\figEnd
+
+Notably, the chord in m.~8 is an \h{E7b9}---this chord belongs not to C major,
+but rather to A minor. At some point, then, the progression shifts from being
+a C-major cycle (the E chord is a minor seventh in the opening bar) to an
+A-minor cycle. Unlike the abrupt shift to the relative major in “Alice in
+Wonderland” (signalled by \h{Eb7}), this modulation is gradual, using a
+traditional pivot chord.\fn{ds-18} In a transformational reading, the
+progression maintains the $t_3$ sequence throughout the first nine measures,
+but the underlying diatonic set changes almost imperceptibly from C major to A
+minor. Zindars uses this modulation in order to negotiate the unusual
+succession of chord qualities in the major diatonic cycle: by beginning the
+progression on iii in a major key and modulating to the relative minor before
+returning to it, he is able to have his cake and eat it too---the chord root E
+appears first as a minor seventh and again later as a dominant of the relative
+minor.
+
+% todo:
+%   - All the Things You Are, heard diatonically
+
 
 % }}}}
 
