--- a/discog.bib
+++ b/discog.bib
@@ -1,9 +1,20 @@
 % Discography
 
+@music{evans:heartsings,
+  author      = {Evans, Bill},
+  title       = {How My Heart Sings!},
+  userd       = {Riverside RLP 473,},
+  origdate    = {1962},
+  series      = {Reissued, Original Jazz Classics},
+  number      = {OJCCD 369-2},
+  year        = {1995},
+  type        = {CD}
+}
+
 @music{evans:portrait,
   author      = {Evans, Bill},
   title       = {Portrait in Jazz},
-  userd       = {Riverside RLP 12-315},
+  userd       = {Riverside RLP 12-315,},
   origdate    = {1960},
   series      = {Reissued, Original Jazz Classics},
   number      = {OJCCD 088-2},
@@ -15,7 +26,7 @@
   author      = {Guaraldi, Vince},
   title       = {A Flower is a Lovesome Thing},
   series      = {Reissued, Original Jazz Classics},
-  number      = {OJCCD-235-2},
+  number      = {OJCCD 235-2},
   year        = {1995},
   origdate    = {1958},
   type        = {CD},
