Add Strunk citation for diatonic cycles

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -213,7 +213,9 @@ throughout]{rings:2011}.}
 \fntext{ds-2a}{%
   \emph{The Real Book} gives these changes in E minor, but most recorded
   performances are in G minor. I have transposed the given changes to reflect
-  the most common performance key.}
+  the most common performance key. Steven Strunk analyzes both “Autumn Leaves”
+  and “How My Heart Sings” (analyzed below) as examples of 10--7 linear
+  intervallic patterns in \headlesscite[96--97]{strunk:1996}.}
 
 \fntext{ds-2}{%
   In running text, dominant seventh chords are given with just a “7,” major
